--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.11.0",
+    "bcrypt": "^4.0.1",
     "date-fns": "^2.10.0",
     "graphql": "^14.6.0"
   },
