--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd ./client; npm run start\" \"cd ./server; npm run dev\""
+    "start": "concurrently \"cd ./client; npm run start\" \"cd ./server; npm run dev\"",
+    "bootstrap": "lerna bootstrap"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "lerna": "^3.20.2"
   }
 }
