--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd ./client; npm run start\" \"cd ./server; npm run dev\"",
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "deploy": "git subtree push --prefix server heroku master"
   },
   "author": "",
   "license": "ISC",
